[package]
name = "jumper"
version = "0.1.2"
edition = "2021"
authors = ["Marcin Radoszewski <moriturius@gmail.com>"]
description = "Jumper is command line utility to store and jump to folders on your system for blazingly fast workflow."
readme = "README.md"
homepage = "https://github.com/marad/jumper"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
home = "0.5.5"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.33.0", features = ["full"] }

[[bin]]
name = "jumper"
test = false
bench = false
